--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,35 @@ header {
   width: 100%;
   top: 0;
   left: 0;
+  overflow: hidden;
+  background-color: white;
 }
 
-.wrapper {
+ul {
+  list-style: none;
+}
+
+li {
+  margin: 15px 0;
+  color: grey
+}
+
+#wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  margin-top: 200px;
+  background
+}
+
+h1 {
+    font-size: 32px;
+    padding: 20px;
+    text-align: center;
 }
 
 form {
-  margin-top: 200px;
 }
 
 input {
