--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ ul {
 
 li {
   margin: 15px 0;
+
   color: grey
 }
 
@@ -30,7 +31,7 @@ li {
 }
 
 h1 {
-    font-size: 32px;
+    font-size: 24px;
     padding: 20px;
     text-align: center;
 }
@@ -43,4 +44,22 @@ input {
   margin: 30px auto;
 }
 @media (min-width: 800px) {
+    header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        justify-content: space-between;
+        margin: 20px 50px;
+    }
+
+    ul {
+        display: flex;
+        margin-right: 100px;
+    }
+    li {
+        margin-right: 20px;
+        padding: 20px
+    }
+
 }
